@@ -4,7 +4,8 @@ v0.3.3:
     - Added a "game_over" routine in "extra.asm" that is called during the game over screen, which could be useful to initialize/save some addresses when getting a game over.
     - Fixed issue with the "Time Up Fix" patch where dying due to a timeout would prevent the timer from working after respawning (thanks worldpeace for reporting this).
     - Small optimization in Death Prelude SFX.
-    - Fixed inconsistent sprite freezing at level start when using a pipe entrance in a level's main sublevel.
+    - Fixed inconsistent sprite freezing at level start when using a pipe entrance in a level's main sublevel (thanks to BabaYegha for reporting this).
+    - Fixed issue where, if going through a pipe during the goal walk, getting a midway and dying afterwards, the music wouldn't restart playing when respawning (thanks to LouisDoucet for reporting this).
 
 v0.3.2:
     - Made the death counter cap at 99999 deaths, instead of overflowing back to 0.
